--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "aedes": "^0.50.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "websocket-stream": "^5.5.2"
   }
 }
