--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
-  "version": 2,
-  "builds": [{ "use": "@vercel/node", "src": "./index.js" }],
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
-      "src": "(.*).js",
-      "dest": "/"
+      "src": "/(.*)",
+      "dest": "index.js"
     }
   ]
 }
